--- a/Kalid.html
+++ b/Kalid.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html> 
+  <head>
+    <title>login page</title>
+  </head>
   <body>
     <h1>login</h1>
     <p>username</p>
     <input>
     <p>password</p>
     <input>
-      <button>login</button>
+    <button>login</button>
   </body>
 </html>
